--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,6 +14,7 @@
 
     <!-- User check JS -->
     <script src="../static/scripts/usercheck.js"></script>
+    <script src="../static/scripts/notifications.js"></script>
 </head>
 
 <body>
@@ -28,7 +29,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="booking.html">BOOKING</a></li>
-            <li><a href="notifications.html">NOTIFICATIONS</a></li>
+            <li><a id="openGameModal" href="#">NOTIFICATIONS</a></li>
             <li><a href="profile.html">PROFILE</a></li>
         </ul>
     </nav>
