--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -111,6 +111,7 @@
     <script src="../static/scripts/dashboard.js"></script>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="../static/scripts/quickjoin.js"></script>
+    <script src="../static/scripts/responsive-nav.js"></script>
 
 
 </body>
