PROFILE ; CSS resposive styling

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/styles/profile.css">
+    <link rel="stylesheet" href="../static/styles/profile-responsive.css">
     <script src="../static/scripts/usercheck.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>My Profile</title>
@@ -36,7 +36,7 @@
                     <p id="full-name">Kai Sutto</p>
                     <p id="username">@GinulayAngMunggo</p>
                 </div>
-                
+
                 <div class="bio-row">
                     <p>Basketball is my game.</p>
                 </div>
@@ -49,7 +49,7 @@
                         <li>GENDER - MALE</li>
                     </ul>
                 </div>
-                
+
 
             </div>
             <div class="right-panel">
@@ -76,7 +76,7 @@
                     <p>POINT GUARD</p>
                 </div>
             </div>
-            
+
         </div>
         <div class="game-history">
             <p>HISTORY</p>
@@ -104,5 +104,6 @@
     <!-- JavaScript -->
     <script src="../static/scripts/profile.js"></script>
     <script src="../static/scripts/donutChart.js"></script>
+    <script src="../static/scripts/responsive-profile-nav.js"></script>
 </body>
 </html>
